Remove unused dependency-related utility classes.
Deleted several utility classes and methods related to Maven dependency management and upgrades as they are no longer needed. This helps reduce code clutter and improves maintainability by eliminating unused files.